# hashavatar

./: .gitignore  2.0-idea.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_METADATA.md  LICENSE  LICENSE-MIT  PROVENANCE.md  README.md  RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  deny.toml  gapanalysis.md  plan-towards-2.0.0.md  release-crates.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: lib.rs
crates/hashavatar-core/: Cargo.toml  README.md
crates/hashavatar-core/src/: avatar.rs  budget.rs  cat.rs  catalog.rs  error.rs  fixed.rs  geometry.rs  identity.rs  kani_proofs.rs  keys.rs  layout.rs  lib.rs  paint.rs  raster.rs  rasterize.rs  scene.rs  scratch.rs  style.rs  svg.rs
crates/hashavatar-core/src/art/: background.rs  families.rs  frame.rs  layers.rs  mod.rs  util.rs
crates/hashavatar-core/src/art/families/: common.rs  creatures.rs  faces.rs  objects.rs
crates/hashavatar-core/src/art/families/faces/: animals.rs  characters.rs
crates/hashavatar-core/src/art/families/faces/animals/: domestic.rs  fantasy.rs  wild.rs
crates/hashavatar-core/src/art/layers/: accessories.rs  common.rs  expressions.rs
crates/hashavatar-core/src/cat/: compiler.rs
crates/hashavatar-core/src/layout/: anchors.rs  resolve.rs
crates/hashavatar-core/src/scene/: clip.rs  tests.rs  work.rs
crates/hashavatar-core/src/style/: accessory.rs  palette.rs
crates/hashavatar-core/src/svg/: clip.rs  options.rs  tests.rs
crates/hashavatar-formats/: Cargo.toml  README.md
crates/hashavatar-formats/src/: encode.rs  error.rs  format.rs  keys.rs  lib.rs  output.rs  writer.rs
crates/hashavatar-formats/tests/: formats.rs
docs/: CANONICAL_EXECUTION.md  CATALOG_CONTRACT.md  CONTRIBUTING.md  CRATE_VERSION_MATRIX.md  CURRENT_STATUS.md  DEPENDENCIES.md  DIGEST_AND_DERIVATION_CONTRACT.md  FAILURE_CONTRACT.md  FORMAT_CONTRACT.md  GITHUB_METADATA.md  KANI.md  LAYERED_STYLE_CONTRACT.md  MIGRATION_2.0.md  PANIC_POLICY.md  PIXEL_CONTRACT.md  PLAN_TOWARDS_2.0.md  PROVENANCE.md  README_POLICY.md  RELEASE.md  SECURITY_CONTROLS.md  STABILITY.md  SVG_CONTRACT.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  VERSION_PLAN.md
docs/archive/: GAP_ANALYSIS_2.0.md
docs/release-notes/: RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.13.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.0.3.md  RELEASE_NOTES_1.0.4.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.1.2.md  RELEASE_NOTES_1.1.3.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.3.0.md
docs/roadmaps/: avif.md  heapless.md  schema.md
examples/: asset_keys.rs  builder_svg.rs  cache_key.rs  cat.rs  catalog_raster_sheet.rs  catalog_sheet.rs  encoded_webp.rs  layer_raster_sheet.rs  layered_raster_sheet.rs
fuzz/: Cargo.toml  deny.toml
fuzz/fuzz_targets/: avatar_inputs.rs  canonical_surface.rs  format_inputs.rs  layout_resolution.rs  polygon_rasterizer.rs  svg_writer.rs
release-notes/: RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.4.2.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.2.md  RELEASE_NOTES_1.1.3.md  RELEASE_NOTES_1.3.0.md  RELEASE_NOTES_2.0.0-alpha.1.md  RELEASE_NOTES_2.0.0-alpha.2.md  RELEASE_NOTES_2.0.0-alpha.3.md  RELEASE_NOTES_2.0.0-alpha.4.md  RELEASE_NOTES_2.0.0-alpha.5.md
roadmaps/: gpu.md
scripts/: check_doc_links.sh  check_format_features.sh  check_fuzz.sh  check_kani.sh  checks.sh  generate-sbom.sh  release_crates.py  reproducible_build_check.sh  stable_release_gate.sh  test_release_crates.py  validate-dependencies.sh  validate-panic-policy.sh  validate-release-metadata.sh  validate-source-size.sh  validate-unsafe-boundary.sh
security/pentest/: README.md  v2.0.0-alpha.1.md  v2.0.0-alpha.2.md  v2.0.0-alpha.3.md  v2.0.0-alpha.4.md
src/: api.rs  avatars.rs  backgrounds.rs  cat_support.rs  contracts.rs  core.rs  encoding.rs  kani_proofs.rs  layers.rs  lib.rs  main.rs  model.rs  prepared.rs  primitives.rs  renderer_types.rs  request.rs  surface.rs  svg.rs  tests.rs
src/avatars/: alien.rs  astronaut.rs  bear.rs  bird.rs  cactus.rs  cat.rs  coffee_cup.rs  common.rs  cupcake.rs  diamond.rs  dog.rs  dragon.rs  fox.rs  frog.rs  ghost.rs  icecream.rs  knight.rs  monster.rs  mushroom.rs  ninja.rs  octopus.rs  panda.rs  paws.rs  penguin.rs  pizza.rs  planet.rs  robot.rs  rocket.rs  shield.rs  skull.rs  slime.rs  wizard.rs
src/contracts/: keys.rs
src/prepared/: tests.rs
src/svg/: alien.rs  astronaut.rs  bear.rs  bird.rs  cactus.rs  cat.rs  coffee_cup.rs  cupcake.rs  diamond.rs  dog.rs  dragon.rs  fox.rs  frog.rs  ghost.rs  icecream.rs  knight.rs  monster.rs  mushroom.rs  ninja.rs  octopus.rs  panda.rs  paws.rs  penguin.rs  pizza.rs  planet.rs  robot.rs  rocket.rs  shield.rs  skull.rs  slime.rs  wizard.rs
tests/: cat_vertical_slice.rs  catalog_port.rs  compatibility_corpus.rs  compatibility_corpus_v1.tsv  golden_fingerprints.txt  layered_style.rs  prepared_api.rs  prepared_request.rs
