[workspace]
members = [".", "crates/hashavatar-core", "crates/hashavatar-formats"]
default-members = ["."]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/valkyoth/hashavatar"
homepage = "https://github.com/valkyoth/hashavatar"

[workspace.dependencies]
roxmltree = "0.21.1"
sanitization = { version = "2.0.1", default-features = false, features = ["alloc"] }
sanitization-crypto-interop = { version = "2.0.1", default-features = false, features = ["sha2"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[profile.release]
overflow-checks = true
panic = "abort"

[package]
name = "hashavatar"
version = "2.0.0-alpha.5"
edition.workspace = true
rust-version.workspace = true
description = "Security-oriented deterministic procedural avatar rendering facade"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/hashavatar/latest/hashavatar/"
readme = "README.md"
keywords = ["avatar", "identicon", "procedural", "graphics", "svg"]
categories = ["multimedia::images", "graphics"]
exclude = [
    ".github/**",
    "docs/archive/**",
    "fuzz/**",
    "security/**",
    "target/**",
]

[dependencies]
hashavatar-core = { path = "crates/hashavatar-core", version = "0.1.0-alpha.5" }
hashavatar-formats = { path = "crates/hashavatar-formats", version = "0.1.0-alpha.5", default-features = false, optional = true }

[features]
default = ["webp"]
webp = ["dep:hashavatar-formats", "hashavatar-formats/webp"]
png = ["dep:hashavatar-formats", "hashavatar-formats/png"]
jpeg = ["dep:hashavatar-formats", "hashavatar-formats/jpeg"]
gif = ["dep:hashavatar-formats", "hashavatar-formats/gif"]
all-formats = ["webp", "png", "jpeg", "gif"]

[dev-dependencies]
roxmltree.workspace = true
sanitization-crypto-interop.workspace = true

[[example]]
name = "encoded_webp"
required-features = ["webp"]

[lints]
workspace = true
