[package]
name = "hashavatar-core"
version = "0.9.0"
edition = "2024"
rust-version = "1.95"
description = "no_std deterministic identity and render-plan core for hashavatar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/valkyoth/hashavatar"
homepage = "https://github.com/valkyoth/hashavatar"
documentation = "https://docs.rs/hashavatar-core/latest/hashavatar_core/"
readme = "README.md"
keywords = ["avatar", "identicon", "procedural", "no-std"]
categories = ["no-std", "multimedia::images", "graphics"]

[dependencies]
blake3 = { version = "1.8.5", default-features = false, optional = true }
sha2 = { version = "0.11.0", default-features = false }
subtle = { version = "2.6.1", default-features = false }
xxhash-rust = { version = "0.8.15", default-features = false, features = ["xxh3"], optional = true }
zeroize = { version = "1.8.2", default-features = false, features = ["alloc"] }

[features]
default = []
std = []
blake3 = ["dep:blake3"]
xxh3 = ["dep:xxhash-rust"]
