[package]
name = "hashavatar-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
hashavatar = { path = "..", version = "1.0.1", features = ["fuzzing"] }
libfuzzer-sys = "0.4"
roxmltree = "0.21.1"

[[bin]]
name = "avatar_inputs"
path = "fuzz_targets/avatar_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "polygon_rasterizer"
path = "fuzz_targets/polygon_rasterizer.rs"
test = false
doc = false
bench = false
