[package]
name = "hashavatar-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
hashavatar = { path = "..", version = "2.0.0-alpha.1" }
libfuzzer-sys = "0.4.13"
roxmltree = "0.21.1"

[[bin]]
name = "avatar_inputs"
path = "fuzz_targets/avatar_inputs.rs"
test = false
doc = false
bench = false

[workspace]
members = []
