[package]
name = "hashavatar-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
hashavatar = { path = "..", version = "2.0.0-alpha.2" }
libfuzzer-sys = "0.4.13"
roxmltree = "0.21.1"

[[bin]]
name = "avatar_inputs"
path = "fuzz_targets/avatar_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonical_surface"
path = "fuzz_targets/canonical_surface.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svg_writer"
path = "fuzz_targets/svg_writer.rs"
test = false
doc = false
bench = false

[workspace]
members = []
